tugas commit final

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="telkomuniversity">telkomuniversity</string>
     <string name="todo" />
     <string name="hassan_ali">Hassan Ali</string>
+    <string name="hassanali">Hassan ali</string>
+    <string name="telkom_university">Telkom_university</string>
+    <string name="Telkom_University" />
+    <string name="Telkom_university">telkomuniversity\n</string>
 </resources>
